--- a/src/app/components/header/log-in/log-in.component.html
+++ b/src/app/components/header/log-in/log-in.component.html
@@ -37,7 +37,8 @@
         <div class="col" style="margin-top: 20px;">
             <h5 class="col-innertext">New to Elearning?</h5>
         </div>
-        <button class="ellipse">Sign Up</button>
+        <button class="ellipse"  data-toggle="modal" data-target="#signupModal" data-dismiss="modal">Sign Up</button>
     </div>
   </div>
 </div>
+
