--- a/src/app/components/breadcrumb-user/breadcrumb-user.component.html
+++ b/src/app/components/breadcrumb-user/breadcrumb-user.component.html
@@ -1,8 +1,3 @@
 <section id="breadcrumb" class="page-top-section set-bg" data-setbg="../../../assets/img/page-top-bg.jpg" style="background-image: url(&quot;../../../assets/img/page-top-bg.jpg&quot;);">
   <div class="container">
-  <h2>{{ code }}</h2>
-  <!-- <div class="site-breadcrumb">
-  <a href="#">Home</a> / <span>About us</span>
-  </div> -->
-  </div>
-  </section>
+  <h2>Welcome back, {{ username }}</h2>
