--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -31,7 +31,7 @@
     <div class="section-title">
       <img src="../../../assets/img/section-title-icon.png" alt="#">
       <p>The best out there</p>
-      <h2>See our features</h2>
+      <h2>Categories</h2>
     </div>
     <div class="row" id="courseCategory">
       <div class="col-lg-4 col-md-6 feature-item" *ngFor="let courseByCategory of courseByCategories">
@@ -50,8 +50,9 @@
   <div class="container">
     <div class="section-title st-white">
       <img src="../../../assets/img/section-title-icon.png" alt="#">
+
+      <h2>Testimonials</h2>
       <p>The best out there</p>
-      <h2>See our features</h2>
     </div>
     <!-- <div class="domain-form-warp">
       <form class="domain-search-form">
@@ -60,7 +61,7 @@
       </form>
       <p>Nullam lacinia ex eleifend orci porttitor, suscipit interdum augue condimentum. Etiam pretium turpis eget nibh laoreet iaculis</p>
     </div> -->
-    <ngx-slick class="carousel" #slickModal="slick-modal" [config]="slideConfig">
+    <ngx-slick class="carousel" #slickModal="slick-modal" [config]="slideConfig1">
 
       <!-- <div ngxSlickItem *ngFor="let slide of slides" class="slide">
             <img src="{{ slide.img }}" alt="" width="100%">
@@ -83,8 +84,13 @@
   <div class="container">
     <div class="section-title">
       <img src="../../../assets/img/section-title-icon.png" alt="#">
-      <p>The best out there</p>
-      <h2>See our features</h2>
+      <!-- <p>The best out there</p> -->
+      <h2>Clients</h2>
+      <ngx-slick style="margin-top: 60px;" #slickModal="slick-modal" [config]="slideConfig2">
+        <div ngxSlickItem *ngFor="let image of images">
+          <img [src]="image.client">
+        </div>
+      </ngx-slick>
     </div>
     <!-- slick -->
   </div>
